[workspace]
resolver = "2"
members = ["anychain-core", "anychain-tron", "anychain-ethereum"]

[workspace.package]
authors = ["Traevelliath"]
edition = "2021"

[workspace.dependencies]
sha3 = "0.10.1"
thiserror = "1.0"
ethereum-types = "0.14.1"
ripemd = "0.1.1"
blake2b_simd = "1.0.0"
bech32 = "0.11.0"
hex = "0.4.2"
libsecp256k1 = "0.7.1"
bls-signatures = "0.15.0"
base58 = "0.2"
rand = "0.8.5"
rand_core = { version = "0.6.3", default-features = false }
rlp = { version = "0.5.2", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.2", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
fvm_shared = "4.1.2"
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"
fvm_ipld_encoding = "0.4.0"
num-derive = "0.4.2"
num-traits = "0.2.15"
lazy_static = "1.4.0"
unsigned-varint = "0.8.0"
num-bigint = "0.4.3"
anyhow = "1.0.75"
forest_encoding = "0.2.2"
cid = "0.11.1"
base64 = "0.22.0"
bytes = "1.0"
protobuf = "3.4.0" #do not update
chrono = "0.4"
ethabi = "18.0.0"
regex = "1.10.4"
clap = { version = "4.4.7", features = ["derive"] }
primitive-types = { version = "0.12.2", features = ["rlp"] }
rustc-hash = "1.1.0"
hmac = "0.12.1"
bs58 = { version = "0.5.1", default-features = false, features = ["check"] }
pbkdf2 = { version = "0.12.1", default-features = false }
unicode-normalization = "0.1.22"
zeroize = { version = "1.5.5", default-features = false }
once_cell = "1.19.0"
subtle = { version = "2", default-features = false }
p256 = "0.13.2"

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "s"   # Optimize for size
lto = true        # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
