[package]
name = "rschain-ethereum"
description = "A Rust library for Ethereum-focused cryptocurrency wallets, enabling seamless transactions on the Ethereum blockchain"
version = "0.9.12"
keywords = ["blockchain", "crypto", "cryptocurrencies", "ethereum", "wallet"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
rschain-core = { workspace = true }
regex = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethabi = { workspace = true }
libsecp256k1 = { workspace = true }
ethereum-types = { workspace = true }

[features]
default = ["std"]
std = ["rschain-core/std"]
