[package]
name = "rschain-tron"
description = "A Rust library for Tron-focused cryptocurrency wallets, enabling seamless transactions on the Tron blockchain"
version = "1.0.0"
keywords = ["tron", "blockchain", "cryptocurrency", "wallet", "transactions"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rschain-core = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base58 = { workspace = true }
bytes = { workspace = true }
protobuf = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ethabi = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
